using DDDSample1.Domain.Shared;

namespace DDDNetCore.Domain.Users
{
    public enum UserRole
    {
        None,
        Admin,
        Doctor,
        Nurse,
        Technician,
        Patient
    }
}